binread/tests/ui/unsupported_type_enum.stderr
error: null enums are not supported
 --> $DIR/unsupported_type_enum.rs:4:1
  |
4 | enum Foo {}
  | ^^^^^^^^^^^

error: null enums are not supported
 --> $DIR/unsupported_type_enum.rs:7:1
  |
7 | enum Bar {}
  | ^^^^^^^^^^^
